// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank line should return the blank_line token 1`] = `
[
  {
    "raw": "
",
    "type": "blank_line",
  },
]
`;

exports[`fenced code block should return the fenced_code_block token 1`] = `
[
  {
    "raw": "\`\`\`javascript
function foo(x) {
  return 3
}
\`\`\`",
    "text": "function foo(x) {
  return 3
}",
    "type": "fenced_code_block",
  },
]
`;

exports[`headings should return the heading token 1`] = `
[
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 1,
    "raw": "# foo
",
    "text": "foo",
    "type": "heading",
  },
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 2,
    "raw": "## foo
",
    "text": "foo",
    "type": "heading",
  },
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 3,
    "raw": "### foo
",
    "text": "foo",
    "type": "heading",
  },
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 4,
    "raw": "#### foo
",
    "text": "foo",
    "type": "heading",
  },
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 5,
    "raw": "##### foo
",
    "text": "foo",
    "type": "heading",
  },
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 6,
    "raw": "###### foo
",
    "text": "foo",
    "type": "heading",
  },
]
`;

exports[`indented code block should return the indented_code_block token 1`] = `
[
  {
    "raw": "    a simple
      indented code block
",
    "text": "a simple
  indented code block",
    "type": "indented_code_block",
  },
]
`;

exports[`link should return the link token 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "raw": "foo",
            "text": "foo",
            "type": "text_inline",
          },
        ],
        "href": "bar",
        "raw": "[foo](bar)",
        "text": "foo",
        "title": null,
        "type": "link",
      },
    ],
    "raw": "[foo](bar)",
    "text": "[foo](bar)",
    "type": "paragraph",
  },
]
`;

exports[`paragraph should return one token on multiple lines 1`] = `
[
  {
    "children": [
      {
        "raw": "foo
bar
baz",
        "text": "foo
bar
baz",
        "type": "text_inline",
      },
    ],
    "raw": "foo
bar
baz
",
    "text": "foo
bar
baz",
    "type": "paragraph",
  },
]
`;

exports[`paragraph should return the paragraph token 1`] = `
[
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "raw": "foo
",
    "text": "foo",
    "type": "paragraph",
  },
]
`;

exports[`thematic break should return the thematic_break token 1`] = `
[
  {
    "raw": "***
",
    "type": "thematic_break",
  },
  {
    "raw": "---
",
    "type": "thematic_break",
  },
  {
    "raw": "___
",
    "type": "thematic_break",
  },
]
`;
